--- a/stockcollection/src/main/resources/templates/stock/stock_cross_increase_effect_new2.html
+++ b/stockcollection/src/main/resources/templates/stock/stock_cross_increase_effect_new2.html
@@ -24,17 +24,19 @@
 
     <section class="col-md-12 content" id="">
         <div style="width: 100%;min-height: 800px;background-color: #fff">
-
+<div style="width: 100%;text-align: center;line-height: 50px">
+    金叉出现之后 ，后面几天的上涨概率
+</div>
 
             <table class="table">
                 <thead>
                 <tr>
                     <th>stockCode</th>
-                    <th>上涨后第一天</th>
-                    <th>上涨后第二天</th>
-                    <th>上涨后第三天</th>
-                    <th>上涨后第四天</th>
-                    <th>上涨后第五天</th>
+                    <th>第一天</th>
+                    <th>第二天</th>
+                    <th>第三天</th>
+                    <th>第四天</th>
+                    <th>第五天</th>
 
                 </tr>
                 </thead>
@@ -146,7 +148,7 @@
 
         var temphtml = "";
         temphtml += "<tr>";
-        temphtml += "<td width=\"50px;\">" + title + "</td>";
+        temphtml += "<td width=\"70px;\">" + title + "</td>";
 
         temphtml += "<td>" + getHtmlsub(val11) + val1 + "/" + count + "</td>";
         temphtml += "<td>" + getHtmlsub(val22) + val2 + "/" + count + "</td>";
