--- a/stockcollection/src/main/resources/templates/stock/index.html
+++ b/stockcollection/src/main/resources/templates/stock/index.html
@@ -50,6 +50,23 @@
         </div>
     </footer>
 
+
+
+    <footer class="col-md-12 content" >
+        <div class="col-lg-6 col-md-6 last">
+            <img src="../../img/5.jpg" alt="Image" class="tm-image">
+        </div>
+        <div class="col-lg-6 col-md-6 background last ">
+            <h2 class="section-title">女神推荐-KDJ 金叉 死叉</h2>
+            <p class="about-text">KDJ 值 统计</p>
+            <p class="about-text">KDJ金交，KDJ死交</p>
+            <div>
+                <button type="button" class="btn yellow-btn normal-btn" onclick="toIndex6()">推荐</button>
+            </div>
+        </div>
+    </footer>
+
+
     <footer class="col-md-12 content">
         <div class="col-lg-6 col-md-6 last">
             <img src="../../img/5.jpg" alt="Image" class="tm-image">
@@ -142,6 +159,9 @@
         window.location.href = "/stock/toStockInfoList?stockCode=000001"
     }
 
+    function toIndex6() {
+        window.location.href = "/stock/toStockKdjCross?stockCode=000001"
+    }
 
 
 
