--- a/stockcollection/src/main/resources/templates/stock/stock_kdj_region.html
+++ b/stockcollection/src/main/resources/templates/stock/stock_kdj_region.html
@@ -6,7 +6,7 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="../../css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="../../css/templatemo-style.css">
-    <title>金叉-死叉推荐</title>
+    <title>KDJ区间</title>
     <script src="../../js/common.js"></script>
 </head>
 
